--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
 .header{
     min-height:100vh;
     width:100%;
@@ -124,7 +125,7 @@ nav .fa{
         height:100vh;
         width:200px;
         top:0;
-        right:-200px;
+        left:-200px;
         text-align:left;
         z-index:2;
         transition:1s;
@@ -268,7 +269,7 @@ h2 {
   }
 
  
-  @media (max-width: 400px) {
+  @media (max-width: 700px) {
     h1 {
       font-size: 1rem;
       top: 20%;
@@ -376,7 +377,6 @@ h2 {
 
 .main-services-col{
     flex-basis:31%;
-    border-radius:10px;
     margin-bottom:5%;
     text-align:left;
 }
@@ -407,6 +407,12 @@ h2 {
     color:blueviolet;
 }
 
+@media(max-width:700px){
+    .main-services-col img{
+        border-radius:0;
+    }
+}
+
 
 .services-contd{
         width:80%;
@@ -429,6 +435,7 @@ h2 {
 
 .testimonials h1{
     color:cadetblue;
+    font-size:24px;
 }
 .testimonials h1:hover{
     color:skyblue;
@@ -529,21 +536,30 @@ h2 {
         margin-left: 0px;
         margin-right:15px;
     }  
+
+    .testimonial-col {
+        border-radius:0;
+    }
+
+    .testimonial-col2{
+        border-radius:0;
+    }
 }
 
-/*----- call to action----*/
-.cta{
+/*----- video page----*/
+.video-page{
+    width:70%;
     position:relative;
     margin:30px auto;
-    width:800px;
     height:400px;
     background-position:center;
     background-size:cover;
     border-radius:10px;
 }
 
-.cta iframe{
+.video-page iframe{
     position:absolute;
+    margin-top:80px;
     width:100%;
     height:100%;
     right:0;
@@ -551,7 +567,6 @@ h2 {
 }
 
 .video-title h1{
-    margin-top:60px;
     color:hotpink;
     text-align:center;
     font-size:32px;
@@ -564,28 +579,19 @@ h2 {
 
 @media(max-width:700px){
 
-    .cta iframe{
-        width:52%;
+    .video-page{
+        width:100%;
+    }
+
+    .video-page iframe{
+        width:100%;
+        margin-top:80px;
         position:absolute;
         left:0%;
         right:5%;
     }
 
-    .cta h1{
-        font-size:24px;
-    }
-}
-
-@media(max-width:400px){
-
-    .cta iframe{
-        width:47%;
-        position:absolute;
-        left:0%;
-        right:5%;
-    }
-
-    .cta h1{
+    .video-title h1{
         font-size:24px;
     }
 }
@@ -594,6 +600,7 @@ h2 {
 
 .footer{
     width:100%;
+    margin-top:150px;
     text-align:center;
     padding:15px 0;
     background-color: indigo;;
@@ -621,6 +628,12 @@ h2 {
 
 .fa-heart-o{
     color:#f44336;
+}
+
+@media(max-width:700px){
+    .footer{
+        margin-top:120px;
+    }
 }
 
 /*----about us page----*/
